--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -49,11 +49,11 @@
   <div class="mt-4">
 
     <ng-content></ng-content>
-    <div class="mt-4">
+    <!-- <div class="mt-4">
       <mat-checkbox class="margin" [(ngModel)]="name">Child Name</mat-checkbox>
       <mat-checkbox class="margin" [(ngModel)]="dob">Child Date of Birth </mat-checkbox>
       <mat-checkbox class="margin" [(ngModel)]="gender">Child Gender</mat-checkbox>
-    </div>
+    </div> -->
 
   </div>
   <div class="mt-4">
